# needs-coffee

./: .gitignore  Cargo.toml  notes.txt
src/: config.rs  errors.rs  main.rs  resource.rs  serve.rs  templates.rs  util.rs
static/: .meta.toml  first_blog.md
templates/: 404.html  about.html  base.html  blog.html  gallery.html  index.html
