[package]
name = "static-site-generator"
version = "0.1.0"
authors = ["Ty Coghlan <Coghlan.Ty@gmail.com>"]

[dependencies]
Inflector = "0.11"
askama = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.31"
html5ever_ext = "0.21"
pulldown-cmark = { version = "0.1.2", default-features = false }
serde = "1"
serde_derive = "1"
toml = "0.4"

[build-dependencies]
askama = "0.6"
