[package]
name = "static-site-generator"
version = "0.1.0"
authors = ["Ty Coghlan <Coghlan.Ty@gmail.com>"]

[dependencies]
Inflector = "0.11"
askama = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.31"
html5ever_ext = "0.21"
image = "0.19"
log = "0.4"
notify = "4.0"
pulldown-cmark = { version = "0.1.2", default-features = false }
rayon = "1.0"
sass-rs = "0.2"
serde = "1"
serde_derive = "1"
simplelog = "0.5"
toml = "0.4"

[build-dependencies]
askama = "0.6"
